feat: integracion de paciente y resultados