@@ -16,9 +16,6 @@ import com.clinicaregional.clinica.repository.AdministradorRepository;
 import com.clinicaregional.clinica.service.AdministradorService;
 
 import com.clinicaregional.clinica.service.RolService;
-
-import com.clinicaregional.clinica.service.S3ServicePublic;
-
 import com.clinicaregional.clinica.service.UsuarioService;
 import com.clinicaregional.clinica.util.FiltroEstado;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -38,49 +35,40 @@ public class AdministradorServiceImpl implements AdministradorService {
     private final UsuarioService usuarioService;
     private final RolService rolService;
     private final FiltroEstado filtroEstado;
-    private final S3ServicePublic s3Service;
 
     @Autowired
     public AdministradorServiceImpl(AdministradorRepository administradorRepository,
             AdministradorMapper administradorMapper, UsuarioService usuarioService, RolService rolService,
-            FiltroEstado filtroEstado,S3ServicePublic s3Service) {
+            FiltroEstado filtroEstado) {
 
         this.administradorRepository = administradorRepository;
         this.administradorMapper = administradorMapper;
         this.usuarioService = usuarioService;
         this.rolService = rolService;
         this.filtroEstado = filtroEstado;
-        this.s3Service = s3Service;
     }
 
     @Transactional(readOnly = true)
     @Override
     public List<AdministradorDTO> listarAdministradores() {
         filtroEstado.activarFiltroEstado(true);
-        List<AdministradorDTO> administradores = administradorRepository.findAll().stream().map(administradorMapper::mapToAdministradorDTO)
-                .toList();
-        return administradores.stream().map(this::agregarUrlImage).collect(Collectors.toList());
+        return administradorRepository.findAll().stream().map(administradorMapper::mapToAdministradorDTO)
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     @Override
     public Optional<AdministradorDTO> getAdministradorById(Long id) {
         filtroEstado.activarFiltroEstado(true);
-        Optional<AdministradorDTO> administradorDTO = administradorRepository.findByIdAndEstadoIsTrue(id).map(administradorMapper::mapToAdministradorDTO);
-        return administradorDTO.map(this::agregarUrlImage);
+        return administradorRepository.findByIdAndEstadoIsTrue(id).map(administradorMapper::mapToAdministradorDTO);
     }
 
     @Transactional(readOnly = true)
     @Override
     public MyInfoAdministrador getMyInfoAdministrador(Long id) {
         filtroEstado.activarFiltroEstado(true);
-
         Administrador administrador = administradorRepository.findByIdAndEstadoIsTrue(id)
-                .orElseThrow(() -> new ResourceNotFoundException("No se encontro Administrador con el id: " + id));
-        if (administrador.getImagenUrl() != null) {
-            String imageUrl = s3Service.generarUrlPublico(administrador.getImagenUrl());
-            administrador.setImagenUrl(imageUrl);
-        }
+                .orElseThrow(() -> new ResourceNotFoundException("No se encontró Administrador con el id: " + id));
         return administradorMapper.mapToMyInfoAdministrador(administrador);
     }
 
@@ -102,17 +90,16 @@ public class AdministradorServiceImpl implements AdministradorService {
         UsuarioDTO usuarioGuardado = usuarioService.guardar(registerAdministradorRequest.getUsuario());
 
         registerAdministradorRequest.getAdministrador().setUsuarioId(usuarioGuardado.getId());
-        Administrador administrador = administradorMapper.mapToAdministrador(registerAdministradorRequest.getAdministrador());
 
         Administrador savedAdministrador = administradorRepository
-                .save(administrador);
+                .save(administradorMapper.mapToAdministrador(registerAdministradorRequest.getAdministrador()));
 
-        return this.agregarUrlImage(administradorMapper.mapToAdministradorDTO(savedAdministrador));
+        return administradorMapper.mapToAdministradorDTO(savedAdministrador);
     }
 
     @Transactional
     @Override
-    public AdministradorDTO updateAdministrador(Long id, AdministradorDTO administradorDTO, MultipartFile imagen) {
+    public AdministradorDTO updateAdministrador(Long id, AdministradorDTO administradorDTO) {
         filtroEstado.activarFiltroEstado(true);
         Administrador findAdministrador = administradorRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("No existe un administrador con el id ingresado"));
@@ -135,20 +122,9 @@ public class AdministradorServiceImpl implements AdministradorService {
         findAdministrador.setFechaContratacion(administradorDTO.getFechaContratacion());
         Usuario usuario = new Usuario();
         usuario.setId(administradorDTO.getUsuarioId());
-        Administrador administrador = administradorMapper.mapToAdministrador(administradorDTO);
-
-        if (imagen != null) {
-            if (administrador.getImagenUrl() != null) {
-                s3Service.eliminarArchivo(administrador.getImagenUrl());
-            }
-            String key = s3Service.subirArchivo(imagen, "administrador" + administrador.getNombres());
-            administrador.setImagenUrl(key);
-        }
-
         Administrador updatedAdministrador = administradorRepository
-                .save(administrador);
-
-        return this.agregarUrlImage(administradorMapper.mapToAdministradorDTO(updatedAdministrador));
+                .save(administradorMapper.mapToAdministrador(administradorDTO));
+        return administradorMapper.mapToAdministradorDTO(updatedAdministrador);
     }
 
     @Transactional
@@ -160,18 +136,7 @@ public class AdministradorServiceImpl implements AdministradorService {
         findAdministrador.setEstado(false); // borrado logico
         usuarioService.eliminar(findAdministrador.getUsuario().getId());
         findAdministrador.setUsuario(null);
-        if (findAdministrador.getImagenUrl() != null) {
-            s3Service.eliminarArchivo(findAdministrador.getImagenUrl());
-        }
         administradorRepository.save(findAdministrador);
     }
 
-    //funcion para obtener el url
-    private AdministradorDTO agregarUrlImage(AdministradorDTO administradorDTO) {
-        if (administradorDTO.getImagenUrl() != null) {
-            String imageUrl = s3Service.generarUrlPublico(administradorDTO.getImagenUrl());
-            administradorDTO.setImagenUrl(imageUrl);
-        }
-        return administradorDTO;
-    }
 }
